# PawBondAI

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  ELASTICSEARCH_IMPLEMENTATION_STATUS.md  LICENSE.md  README.md  requirements.txt
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  applications.py  case_studies.py  chat.py  chat_history.py  dogs.py  knowledge.py  medical_documents.py  outcomes.py  routes.py
backend/app/core/: agent.py  config.py  exceptions.py  google_cloud.py  logger.py
backend/app/models/: es_documents.py  schemas.py
backend/app/services/: bigquery_service.py  compatibility_service.py  document_ai_service.py  elasticsearch_client.py  elasticsearch_http_client.py  elasticsearch_service.py  language_service.py  matching_service.py  medical_extraction_service.py  sentiment_service.py  storage_service.py  vertex_ai_service.py  vertex_gemini_service.py
backend/app/tools/: __init__.py
backend/tests/: test_csv_upload.py
backend/tests/services/: test_document_ai_service.py  test_query_success_rates.py  test_sentiment_service.py
config/: settings.py
frontend/: .env.example  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AITraceDrawer.tsx  ApplicationAnalysis.tsx  BehavioralAnalysis.tsx  ChatInterface.tsx  DeleteChatModal.tsx  Layout.tsx  LeftSidebar.tsx  MatchCard.tsx  MessageBubble.tsx  RightSidebar.tsx
frontend/src/contexts/: SearchContext.tsx
frontend/src/data/: mockAdopterData.ts  mockAnalysisData.ts  mockBehavioralData.ts  mockCardData.ts
scripts/: pdf_ingestion.py  test_es_connection.py
(+31 files in other folders)
